<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TemasActivity">

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/text_titulo"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="24dp"
            android:textColor="#000000"
            android:layout_marginBottom="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/ckdCinema"
            android:text="@string/ckb_cinema"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/ckdFutubol"
            android:text="@string/ckb_futubol"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/ckdGastronomia"
            android:text="@string/ckb_gastronimia"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/ckdInformatica"
            android:text="@string/ckb_informatica"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/ckdLiteratura"
            android:text="@string/ckb_literatura"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/ckdTeatro"
            android:text="@string/ckb_teatro"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnExibir"
                android:text="@string/btn_exibir"
                android:width="120dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                />

            <Button
                android:id="@+id/btnDesmarcar"
                android:text="@string/btn_Desmarcar"
                android:width="120dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtTotalSelecionado"
            android:text="@string/txt_selecionados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>